fix scrollbar again

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -46,16 +46,16 @@
     overflow: auto;
 }
 
-::-webkit-scrollbar {
+  .timeslots-container::-webkit-scrollbar {
     height: 8px; /* Sets the height of the scrollbar */
   }
   
-::-webkit-scrollbar-thumb {
+  .timeslots-container::-webkit-scrollbar-thumb {
     background-color: #888; /* Color of the scrollbar handle */
     border-radius: 4px; /* Rounds the handle */
   }
   
-::-webkit-scrollbar-track {
+  .timeslots-container::-webkit-scrollbar-track {
     background-color: #f1f1f1; /* Background color of the scrollbar track */
     border-radius: 4px; /* Rounds the track */
   }
